@@ -11,7 +11,8 @@ import Selection from '../api/dom/Selection';
 import DOMUtils from '../api/dom/DOMUtils';
 import Editor from '../api/Editor';
 import * as NodeType from '../dom/NodeType';
-import { FormatAttrOrStyleValue, FormatVars } from '../api/fmt/Format';
+import { FormatAttrOrStyleValue, FormatVars, Format } from '../api/fmt/Format';
+import { Obj, Arr, Type } from '@ephox/katamari';
 
 const isNode = (node: any): node is Node => !!(node).nodeType;
 
@@ -169,6 +170,35 @@ const getParents = function (dom: DOMUtils, node: Node, selector?: string) {
   return dom.getParents(node, selector, dom.getRoot());
 };
 
+const isVariableFormatName = (editor: Editor, formatName: string): boolean => {
+  const hasVariableValues = (format: Format) => {
+    const isVariableValue = (val: string): boolean => val.length > 1 && val.charAt(0) === '%';
+    return Arr.exists([ 'styles', 'attributes' ], (key: 'styles' | 'attributes') =>
+      Obj.get(format, key).exists((field) => {
+        const fieldValues = Type.isArray(field) ? field : Obj.values(field);
+        return Arr.exists(fieldValues, isVariableValue);
+      }));
+  };
+  return Arr.exists(editor.formatter.get(formatName) as Format[], hasVariableValues);
+};
+
+/**
+ * Checks if the two formats are similar based on the format type, attributes, styles and classes
+ */
+const areSimilarFormats = (editor: Editor, formatName: string, otherFormatName: string) => {
+  // Note: MatchFormat.matchNode() uses these parameters to check if a format matches a node
+  // Therefore, these are ideal to check if two formats are similar
+  const validKeys = [ 'inline', 'block', 'selector', 'attributes', 'styles', 'classes' ];
+  const filterObj = (format: Record<string, any>) => Obj.filter(format, (_, key) => Arr.exists(validKeys, (validKey) => validKey === key));
+  return Arr.exists(editor.formatter.get(formatName) as Format[], (fmt1) => {
+    const filteredFmt1 = filterObj(fmt1);
+    return Arr.exists(editor.formatter.get(otherFormatName) as Format[], (fmt2) => {
+      const filteredFmt2 = filterObj(fmt2);
+      return Obj.equal(filteredFmt1, filteredFmt2);
+    });
+  });
+};
+
 export {
   isNode,
   isInlineBlock,
@@ -183,5 +213,7 @@ export {
   normalizeStyleValue,
   getStyle,
   getTextDecoration,
-  getParents
+  getParents,
+  isVariableFormatName,
+  areSimilarFormats
 };
